# libmsfa

./: CMakeLists.txt  Readme.md
include/: libmsfa.h
src/: aligned_buf.h  main.cc
